--- a/RanderUser/package.json
+++ b/RanderUser/package.json
@@ -3,15 +3,18 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit --skipLibCheck && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@volar/vue-language-plugin-pug": "^1.1.7",
     "axios": "^1.3.3",
     "pinia": "^2.0.31",
+    "pug": "^3.0.2",
+    "serve": "^14.2.0",
     "url": "^0.11.0",
     "vue": "^3.2.25",
     "vue-router": "^4.1.6"
@@ -23,6 +26,6 @@
     "typescript": "^4.4.4",
     "vitawind": "^2.2.4",
     "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^1.1.7"
   }
 }
