--- a/NestKey/package.json
+++ b/NestKey/package.json
@@ -11,13 +11,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@volar/vue-language-plugin-pug": "^1.1.7",
-    "axios": "^1.3.3",
-    "pinia": "^2.0.31",
     "pug": "^3.0.2",
     "serve": "^14.2.0",
     "url": "^0.11.0",
-    "vue": "^3.2.25",
-    "vue-router": "^4.1.6"
+    "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
